2008-12-04  Robert Staudinger  <robsta@gnome.org>

	* ccss-cairo/ccss-background-parser.c (background_factory):
	* ccss-cairo/ccss-border-parser.c (border_color_factory),
	(border_factory), (border_left_factory), (border_top_factory),
	(border_right_factory), (border_bottom_factory),
	(border_radius_factory):
	* ccss-doc/tmpl/node.sgml:
	* ccss-doc/tmpl/property.sgml:
	* ccss/ccss-grammar-parse.c (property_cb):
	* ccss/ccss-property.h:
	Pass the property name to the factory function.

2008-12-04  Robert Staudinger  <robsta@gnome.org>

	* ccss-doc/ccss-sections.txt:
	* ccss-doc/tmpl/grammar.sgml:
	* ccss-gtk/Makefile.am:
	* ccss-gtk/ccss-gtk-properties.c:
	* ccss-gtk/ccss-gtk-properties.h:
	* ccss/ccss-grammar.c (ccss_grammar_lookup_property),
	(ccss_grammar_lookup_function):
	* ccss/ccss-grammar.h:
	* ccss/ccss.sym:
	API to query property- and function-handlers.

2008-12-03  Robert Staudinger  <robsta@gnome.org>

	* Makefile.am:
	* ccss-cairo/ccss-cairo-style.h:
	* configure.in:
	* libccss-gtk-1.pc.in:
	Hook up ccss-gtk with the build system.

2008-12-03  Robert Staudinger  <robsta@gnome.org>

	* ccss-gtk/Makefile.am:
	* ccss-gtk/ccss-gtk-grammar.c (ccss_gtk_grammar_create):
	* ccss-gtk/ccss-gtk-grammar.h:
	* ccss-gtk/ccss-gtk-style.c (ccss_gtk_style_serialize):
	* ccss-gtk/ccss-gtk-style.h:
	* ccss-gtk/ccss-gtk.c (ccss_gtk_init), (ccss_gtk_shutdown):
	* ccss-gtk/ccss-gtk.h:
	* ccss-gtk/ccss-gtk.sym:
	Skeleton implementation for gtk support, not in the build chain yet.

2008-12-02  Robert Staudinger  <robsta@gnome.org>

	* HACKING:
	* ccss-cairo/ccss-image.c (load_image):
	* ccss-doc/ccss-sections.txt:
	* ccss-doc/tmpl/stylesheet.sgml:
	* ccss/ccss-grammar.c (ccss_grammar_create_stylesheet_from_buffer),
	(ccss_grammar_create_stylesheet_from_file):
	* ccss/ccss-style-priv.h:
	* ccss/ccss-style.c (ccss_style_destroy):
	* ccss/ccss-stylesheet-priv.h:
	* ccss/ccss-stylesheet.c (ccss_stylesheet_create),
	(ccss_stylesheet_add_from_file), (ccss_stylesheet_destroy),