@@ -43,10 +43,12 @@ typedef struct {
 static ccss_property_class_t const *
 peek_property_class (void);
 
-static ccss_property_base_t *
-property_create (ccss_grammar_t const	*grammar,
-		 CRTerm const		*values,
-		 void			*user_data)
+static bool
+property_factory (ccss_grammar_t const	*grammar,
+		  ccss_block_t		*block,
+		  char const		*name,
+		  CRTerm const		*values,
+		  void			*user_data)
 {
 	ccss_property_generic_t	*prop, p;
 	char const		*s;
@@ -142,10 +144,10 @@ property_convert (ccss_property_generic_t	*self,
 ccss_property_class_t const _ptable[] = {
   { 
 	.name = "*",
-	.property_create = property_create,
+	.property_create = NULL,
 	.property_destroy = (ccss_property_destroy_f) property_destroy,
 	.property_convert = (ccss_property_convert_f) property_convert,
-	.property_factory = NULL,
+	.property_factory = property_factory,
 	.property_inherit = NULL
   }, { 
 	.name = NULL
